<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">VTHacks</string>
    <string name="action_group">Add Group</string>
    <string name="label_splash_screen">Splash Screen</string>
    <string name="label_announcements">Announcements</string>
    <string name="label_schedule">Schedule</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_map">Map</string>
    <string name="label_groups">Group Finder</string>
    <string name="label_photos">Photos</string>
    <string name="label_awards">Awards</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="refreshed_at">Refreshed at</string>
    <string name="tap_to_refresh">Tap to Refresh</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="release_to_refresh">Release to Refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="EmptyTextView">EmptyTextView</string>
    <string name="label_members">Group Members</string>
    <string name="label_email">Email:</string>
    <string name="label_twitter">Twitter:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_name">Name</string>
    <string name="label_skills">Skills</string>
    <string name="label_ideas">Ideas and/or Skills</string>
    <string name="label_contact_info">Contact Info\n(1 required)</string>
    <string name="btn_add_group">Add Group</string>
    <string name="hint_members">Team Members</string>
    <string name="hint_ideas">Ideas/Skills</string>
    <string name="hint_email">email@email.com</string>
    <string name="hint_twitter">\@Twitter</string>
    <string name="hint_phone">555-555-5555</string>
    <string name="members_empty">Please fill out at least one member\'s name and try again.</string>
    <string name="ideas_empty">Please fill out at least one idea/skill and try again.</string>
    <string name="password_empty">Please fill out the password and try again.</string>
    <string name="all_contact_info_empty">Please fill out at least one contact method and try again.</string>
    <string name="label_password">Password\n(For Deletion)</string>
    <string name="http_problem_with_response">Trouble getting server response. Please try again.</string>
    <string name="http_malformed_request">One or more required fields were left unfilled. Please fill them and try again.</string>
    <string name="add_group_success">Successfully added your group!</string>
    <string name="hint_password">Password</string>
    <string name="fill_password_to_delete">Enter password to delete group</string>
    <string name="delete_group">Delete group</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="group_not_deleted">Group not deleted.</string>
    <string name="group_id_not_found">Group does not have an id.</string>
    <string name="http_group_not_found">Group not found. Try refreshing.</string>
    <string name="delete_group_success">Group deleted.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="error_getting_markers">Trouble getting map markers from server.</string>

</resources>