<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/members_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/membersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_members"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/membersEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_members"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ideas_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/ideasTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_ideas"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ideasEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ideas"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/contactInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_contact_info"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/twitter_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/twitterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_twitter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/twitterEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_twitter"
                    android:inputType="textNoSuggestions" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_password"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/addGroupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_group" />
    </LinearLayout>

</ScrollView>