<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FirstRow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainMenuActivity" >

    <LinearLayout
        android:id="@+id/Row_One"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/announcement_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/announcements_res"
            android:gravity="center_horizontal"
            android:text="@string/label_announcements" />

        <TextView
            android:id="@+id/schedule_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/calender_res"
            android:gravity="center_horizontal"
            android:text="@string/label_schedule" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row_Two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/map_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/map_res"
            android:gravity="center_horizontal"
            android:text="@string/label_map" />

        <TextView
            android:id="@+id/awards_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/awards_res"
            android:gravity="center_horizontal"
            android:text="@string/label_awards" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row_Three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/contacts_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/contacts_res"
            android:gravity="center_horizontal"
            android:text="@string/label_contacts" />

        <TextView
            android:id="@+id/chat_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/chat_res"
            android:gravity="center_horizontal"
            android:text="@string/label_chat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row_Four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/social_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/social_res"
            android:gravity="center_horizontal"
            android:text="@string/label_photos" />

    </LinearLayout>

</LinearLayout>