<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/contact_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_members"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/membersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EmptyTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/label_ideas"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ideasTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EmptyTextView"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/title_underline"
                android:gravity="center_horizontal"
                android:text="@string/fill_password_to_delete"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>